<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.imovel.tabajaraimobiliaria.TabajaraImobiliaria">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/titulo"
        android:textSize="31sp"
        android:textStyle="italic|bold"
        android:textColor="@color/colorTitle"/>
    <TextView
        android:id="@+id/descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/titulo"
        android:layout_marginTop="6dp"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        />
    <TextView
        android:id="@+id/codigo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo"
        android:layout_below="@id/descricao"/>

    <EditText
        android:id="@+id/codigoTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/codigo"
        android:layout_alignBottom="@+id/codigo"
        android:layout_toRightOf="@id/codigo"
        android:layout_toEndOf="@id/codigo"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:inputType="none"
        android:hint="Código"/>
    <TextView
        android:id="@+id/tipo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:layout_below="@id/codigo"/>

    <EditText
        android:id="@+id/tipoTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipo"
        android:layout_alignBottom="@+id/tipo"
        android:layout_toRightOf="@id/tipo"
        android:layout_marginLeft="8dp"
        android:inputType="none"
        android:textSize="24sp"
        android:hint="Tipo do imóvel"/>
    <TextView
        android:id="@+id/bairro"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bairro"
        android:layout_below="@id/tipo"/>

    <EditText
        android:id="@+id/bairroTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bairro"
        android:layout_alignBottom="@+id/bairro"
        android:layout_toRightOf="@id/bairro"
        android:layout_marginLeft="8dp"
        android:inputType="none"
        android:textSize="24sp"
        android:hint="Bairro"/>
    <TextView
        android:id="@+id/area"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:layout_below="@id/bairro"/>

    <EditText
        android:id="@+id/areaTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/area"
        android:layout_alignBottom="@+id/area"
        android:layout_toRightOf="@id/area"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        android:inputType="none"
        android:hint="Área"/>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/areaTexto"
        android:text="m²"
        android:textColor="@color/colorGray"
        android:layout_below="@id/bairro"
        />
    <TextView
        android:id="@+id/quartos"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quartos"
        android:layout_below="@id/area"/>

    <EditText
        android:id="@+id/quartosTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quartos"
        android:layout_alignBottom="@+id/quartos"
        android:layout_toRightOf="@id/quartos"
        android:inputType="none"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        android:hint="Nº Quartos"/>
    <TextView
        android:id="@+id/banheiros"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banheiros"
        android:layout_below="@id/quartos"/>

    <EditText
        android:id="@+id/banheirosTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/banheiros"
        android:layout_alignBottom="@+id/banheiros"
        android:inputType="none"
        android:layout_toRightOf="@id/banheiros"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        android:hint="Nº Banheiros"/>
    <TextView
        android:id="@+id/garagens"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garagens"
        android:inputType="number"
        android:layout_below="@id/banheiros"/>

    <EditText
        android:id="@+id/garagensTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/garagens"
        android:layout_alignBottom="@+id/garagens"
        android:layout_toRightOf="@id/garagens"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        android:inputType="none"
        android:hint="Nº Garagens"/>
    <TextView
        android:id="@+id/preco"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:layout_below="@id/garagens"/>
    <TextView
        android:id="@+id/real"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/preco"
        android:text="R$"
        android:layout_below="@id/garagens"/>
    <EditText
        android:id="@+id/precoTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/preco"
        android:layout_alignBottom="@+id/preco"
        android:layout_toRightOf="@id/real"
        android:layout_marginLeft="3dp"
        android:textSize="24sp"
        android:inputType="none"
        android:hint="Preço"/>
    <Button
        android:id="@+id/bPrimeiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preco"
        android:layout_marginTop="10dp"
        android:onClick="botaoApertado"
        android:text="@string/bPrimeiro"
        android:background="@color/buttons"
        android:layout_marginLeft="6dp"
        android:textSize="18sp"
        android:textAlignment="center" />
    <Button
        android:id="@+id/bAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preco"
        android:layout_toRightOf="@id/bPrimeiro"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="6dp"
        android:onClick="botaoApertado"
        android:text="@string/bAnterior"
        android:background="@color/buttons"
        android:textSize="18sp"
        android:textAlignment="center" />
    <Button
        android:id="@+id/bProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preco"
        android:layout_toRightOf="@id/bAnterior"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="6dp"
        android:onClick="botaoApertado"
        android:text="@string/bProximo"
        android:background="@color/buttons"
        android:textSize="18sp"
        android:textAlignment="center" />
    <Button
        android:id="@+id/bUltimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preco"
        android:layout_toRightOf="@id/bProximo"
        android:layout_marginTop="10dp"
        android:onClick="botaoApertado"
        android:layout_marginLeft="6dp"
        android:text="@string/bUltimo"
        android:background="@color/buttons"
        android:textSize="18sp"
        android:textAlignment="center" />


</RelativeLayout>
